[gd_scene load_steps=4 format=3 uid="uid://dhsyim1ws7jr7"]

[ext_resource type="PackedScene" uid="uid://bsr7pil8jetlk" path="res://boundary/boundary.tscn" id="1_b1kqk"]
[ext_resource type="Script" path="res://game.gd" id="1_ivi3b"]
[ext_resource type="PackedScene" uid="uid://4hc618o25cbk" path="res://background/background.tscn" id="2_i508y"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ivi3b")

[node name="Background" parent="." instance=ExtResource("2_i508y")]
position = Vector2(1611, 1898)
scale = Vector2(1.8, 1.8)

[node name="Boundary" parent="." instance=ExtResource("1_b1kqk")]
unique_name_in_owner = true
position = Vector2(576, 324)
scale = Vector2(1.01163, 1)

[node name="EnemySpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 396.0
offset_top = 276.0
offset_right = 437.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2

[node name="CountDownLabel" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "#"

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
